<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">순찰 커넥트</string>

    <string name="search_hint">주소를 입력하세요</string>
    <string name="action_search">검색</string>
    <string name="action_add_by_tap">지도를 눌러 지점 추가</string>
    <string name="action_start_patrol">순찰 시작</string>
    <string name="action_stop_patrol">순찰 종료</string>
    <string name="points_title">등록된 순찰 지점</string>
    <string name="no_points">등록된 지점이 없습니다. 주소를 검색하거나 지도를 눌러 지점을 추가하세요.</string>
    <string name="delete_point">삭제</string>
    <string name="point_added">지점이 추가되었습니다.</string>
    <string name="need_location_permission">순찰 기능을 사용하려면 위치 권한이 필요합니다.</string>
    <string name="need_background_location_permission">백그라운드에서도 위치를 추적하려면 \'항상 허용\'을 선택해주세요.</string>
    <string name="need_full_screen_intent_permission">도착 시 자동으로 안내 화면을 띄우려면 \'전체 화면 알림\' 권한을 허용해주세요. (선택 사항)</string>
    <string name="grant">권한 설정으로 이동</string>
    <string name="cancel">닫기</string>

    <string name="notif_channel_ongoing_name">순찰 진행 상태</string>
    <string name="notif_channel_arrival_name">순찰 지점 도착 알림</string>
    <string name="notif_ongoing_title">순찰 진행중</string>
    <string name="notif_ongoing_text">다음 지점으로 안내중입니다</string>
    <string name="notif_arrival_title">다음 순찰 지점으로 안내</string>
    <string name="notif_arrival_text">%1$s 지점 도착 확인. 탭하면 카카오맵으로 다음 지점을 안내합니다.</string>
    <string name="notif_completed_title">순찰 완료</string>
    <string name="notif_completed_text">등록된 모든 지점을 순찰했습니다.</string>

    <string name="kakao_not_installed">카카오맵 앱이 설치되어 있지 않습니다. 설치 페이지로 이동합니다.</string>
    <string name="today_log_title">오늘의 순찰 기록</string>
</resources>
